# reprogramming-ai-models

./: .gitattributes  .gitignore  README.md  analysis.ipynb  analysis_old.ipynb  blogpost_figures.ipynb  filtered.ipynb  graphs.ipynb  main.ipynb  main_GGB.ipynb  main_OUS.ipynb  main_old.ipynb  main_rate_limited.ipynb  main_rate_limited_obsolete.ipynb  main_rate_limited_working_kinda copy.ipynb  main_rate_limited_working_kinda.ipynb  misc.ipynb  pyproject.toml  shared.py  sorting.ipynb
data/: 20241123205432.csv  20241124001836.csv  20241124033721overall impact.csv  20241124035332duty.csv  20241124082514greater good.csv  20241124101116ages.csv  20241124153450greater good.csv  20241124154532overall impact.csv  20241124155256duty.csv  20241124165515ethic.csv  20241219172724_base70B_OUS.csv  20241219173023_base70B_GGB.csv  20241219173256_base8B_GGB.csv  20241219173351_base8B_OUS.csv  20241226183826_base70B33_OUS.csv  20241226184047_base8B31_OUS.csv  20250103153608_moral.csv  20250104023112_ethic.csv  20250104091128_dignity.csv  20250114175418.csv  20250114175930.csv  20250114180206.csv  20250114223758.csv  20250117181646_altruism.csv  20250117181646_altruism_updated.csv  20250119201457base70B33_GGB_inverted.csv  20250125170346base70B33_GGB.csv  GGB_IHonly20250121044426altruism.csv  GGB_IHonly20250121123957empathy.csv  GGB_IHonly20250121142449fairness.csv  GGB_inverted20250120112538altruism.csv  GGB_inverted20250121164933fairness.csv  GGB_inverted20250121182226empathy.csv  GGB_inverted20250121195539altruism.csv  baseline_models.csv  elephant_features.csv  personas_test.csv  (+4 more)
(+11 files in other folders)
