[tool.poetry]
name = "reprogramming-ai-models"
version = "0.1.0"
description = ""
authors = ["Boris The Brave <boris@boristhebrave.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
goodfire = "^0.2.32"
ipykernel = "^6.29.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
