[tool.poetry]
name = "reprogramming-ai-models"
version = "0.1.0"
description = ""
authors = ["Boris The Brave <boris@boristhebrave.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
ipykernel = "^6.29.5"
scipy = "^1.14.1"
pandas = "^2.2.3"
tqdm = "^4.67.0"
matplotlib = "^3.9.2"
nbstripout = "^0.8.1"
seaborn = "^0.13.2"
goodfire = "^0.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
